--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hale-Human Rights and Inclusion Network"
     />
     <link rel="icon" href="./assets/hale-logo.png">
     <title>HALE-Human Rights And Inclusion Network</title>
