--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,21 @@
     />
     <link rel="icon" href="./assets/hale-logo.png">
     <title>HALE-Human Rights And Inclusion Network</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://www.humanrightsinclusion.org",
+        "logo": "https://i.postimg.cc/s25BSHfc/banner-02.jpg",
+        "name": "HALE - Human Rights and Inclusion Network",
+        <!-- "sameAs": [
+          "https://www.facebook.com/yourprofile",
+          "https://www.linkedin.com/in/yourprofile",
+          "https://twitter.com/yourprofile"
+        ] -->
+      }
+      </script>
+      
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
