refined contact page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Hale-Human Rights and Inclusion Network"
+      content="HALE-Human Rights and Inclusion Network"
     />
     <link rel="icon" href="./assets/hale-logo.png">
     <title>HALE-Human Rights And Inclusion Network</title>
@@ -17,11 +17,6 @@
         "url": "https://www.humanrightsinclusion.org",
         "logo": "https://i.postimg.cc/s25BSHfc/banner-02.jpg",
         "name": "HALE - Human Rights and Inclusion Network",
-        <!-- "sameAs": [
-          "https://www.facebook.com/yourprofile",
-          "https://www.linkedin.com/in/yourprofile",
-          "https://twitter.com/yourprofile"
-        ] -->
       }
       </script>
       
